notebook about TF image classification finished

--- a/notebooks/Federated MNIST TF example with flexible decorators.ipynb
+++ b/notebooks/Federated MNIST TF example with flexible decorators.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# FLEXible tutorial: MNIST classification using Tensorflow\n",
     "\n",
-    "FLEXible is a library to federate models. We offer the tools to load and federate data or to load federated data, and the tools to create a federated environment. The user can define the model and the *communication primitives* to train the model in a federated environment, but we already offer some simple functions that let the user to build an fast and easy experiment. This primitives can be expressed in the following steps:\n",
+    "FLEXible is a library to federate models. We offer the tools to load and federate data or to load federated data, and the tools to create a federated environment. The user can define the model and the *communication primitives* to train the model in a federated environment, but we already offer decorators so that an advancer user can implement its own federated workflow. We design python decorators to handle the following federated learning flows:\n",
     "- initialization: Initialize the model in the server.\n",
     "- deploy model: Deploy the model to the clients.\n",
     "- training: Define the train function.\n",
@@ -16,11 +16,9 @@
     "- deploy model: Deploy the model with the updated weights to the clients.\n",
     "- evaluate: Define the evaluate function.\n",
     "\n",
-    "In this notebook, we show how to use the defined primitive functions, letting the user the implementation of some key functions:\n",
-    "- Define the model to train: It's necessary to tell server and clients which model will be trained.\n",
-    "- Aggregator method: In this notebook we will implement FedAvg as the aggregation function.\n",
+    "In this notebook, we show how to use decorators, to implement advanced federated learning concepts.\n",
     "\n",
-    "Note that the primitive functions that we offer are basics functions, as we assume how the federated learning training will be. If you want to do a more customizable training loop, please check the notebook flex_text_classification_tensorflow_demo, as we show there how to implement the primitive functions from scrach. We will follow this [tutorial](https://www.tensorflow.org/tutorials/quickstart/beginner?hl=es-419) from Tensorfllow 2.0 Guide for begginers. "
+    "If these tools are not low-level enough, try creating your own decorators or use directly FLEXible at low-level [here](./flex_text_classification_tensorflow_demo.ipynb) ."
    ]
   },
   {
@@ -47,6 +45,14 @@
     "from flex.datasets import load\n",
     "\n",
     "flex_dataset, test_data = load(\"federated_emnist\", return_test=True, split=\"digits\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`@init_server_model` is a decorator designed to perform the initialization of the server model in a client-server architecture. It has no requirements for specific arguments in the function that uses it."
    ]
   },
   {
@@ -114,6 +120,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`@deploy_server_model` is a decorator designed to copy the model from the server to the clients at each federated learning round. The function that uses it, must have at least one argument, which is the FlexModel object that stores the model at the server."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -141,6 +155,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Suprisingly, there is no decorator for the training process as it can be imnplemented directly."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -159,6 +181,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`@collect_clients_weights` as it name says, it collects weights from a set of clients, the function that uses it must have at least one argument, the FlexModel from each client, and it is expected to return the weights of her model."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -171,6 +201,14 @@
     "    return client_flex_model.model.get_weights()\n",
     "\n",
     "aggregators.map(get_clients_weights, selected_clients)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`@aggregate_weights` simplifies the process of aggregating and the function using it expects at least one argument, a list that contains the weights collected in the step before using `@collect_clients_weights`."
    ]
   },
   {
@@ -191,6 +229,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`@set_aggregated_weights` is designed as a setter, and it sets the aggregated weights from the aggregator to the server. The function that uses it expects at least two arguments, the FlexModel at the server and the aggregated weights as returned in the last step."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -206,6 +252,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`@evaluate_server_model` is coded to test the server model using external data. The function that uses it must have at least one argument, the FlexModel at the server."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -215,10 +269,10 @@
     "\n",
     "@evaluate_server_model\n",
     "def evaluate_global_model(server_flex_model: FlexModel, test_data=None):\n",
-    "    loss, acc = server_flex_model.model.evaluate(test_data.X_data, test_data.y_data, verbose=False)\n",
-    "    print(f\"Test acc {acc:.4f}, test loss {loss:.4f}\")\n",
+    "    return server_flex_model.model.evaluate(test_data.X_data, test_data.y_data, verbose=False)\n",
     "\n",
-    "servers.map(evaluate_global_model, test_data=test_data)"
+    "metrics = servers.map(evaluate_global_model, test_data=test_data)\n",
+    "print(metrics[0])"
    ]
   },
   {
