Notebook working. Only needs to add comments to the notebook.

--- a/notebooks/flex_text_classification_huggingface_demo.ipynb
+++ b/notebooks/flex_text_classification_huggingface_demo.ipynb
@@ -38,9 +38,13 @@
     "\n",
     "from datasets.load import load_dataset\n",
     "import torch\n",
-    "from transformers import AutoModelForSequenceClassification, AutoTokenizer\n",
+    "from transformers import AutoModelForSequenceClassification, AutoTokenizer, TFAutoModelForSequenceClassification\n",
     "\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "TRANSFORMER_MODEL = \"bert-base-uncased\"\n",
+    "TRANSFORMER_MODEL = \"bert-base-cased\"\n",
+    "TRANSFORMER_MODEL = \"distilbert-base-uncased\""
    ]
   },
   {
@@ -154,8 +158,9 @@
     "@init_server_model\n",
     "def define_model(*args):\n",
     "    flex_model = FlexModel()\n",
-    "    tokenizer = AutoTokenizer.from_pretrained(\"bert-base-cased\")\n",
-    "    model =  AutoModelForSequenceClassification.from_pretrained(\"bert-base-cased\", num_labels=2)\n",
+    "    tokenizer = AutoTokenizer.from_pretrained(TRANSFORMER_MODEL)\n",
+    "    model =  AutoModelForSequenceClassification.from_pretrained(TRANSFORMER_MODEL, num_labels=2)\n",
+    "    # model = TFAutoModelForSequenceClassification.from_pretrained(\"bert-base-cased\", num_labels=2)\n",
     "    flex_model['model'] = model\n",
     "    flex_model['tokenizer'] = tokenizer\n",
     "    return flex_model"
@@ -205,59 +210,228 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Train loop using torch"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Create custom class\n",
+    "from torch.utils.data import Dataset as TorchDataset\n",
+    "\n",
+    "class IMDbDataset(TorchDataset):\n",
+    "    def __init__(self, encodings, labels) -> None:\n",
+    "        self.encodings = encodings\n",
+    "        self.labels = labels\n",
+    "\n",
+    "    def __getitem__(self, idx):\n",
+    "        item = {key: torch.tensor(val[idx]) for key, val in self.encodings.items()}\n",
+    "        item['labels'] = torch.tensor(self.labels[idx])\n",
+    "        return item\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return len(self.labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Using Trainer\n",
+    "\n",
     "from flex.data import Dataset\n",
-    "from torch.optim import AdamW\n",
     "from tqdm.auto import tqdm\n",
-    "from datasets import Dataset as HFDataset\n",
     "from torch.utils.data import DataLoader\n",
+    "from torch.optim import AdamW\n",
+    "from transformers import Trainer, TrainingArguments\n",
     "\n",
-    "def tokenize_function(example, tokenizer):\n",
-    "    return tokenizer(example, padding=\"max_length\", truncation=True)\n",
     "\n",
-    "def train_loop(model, train_dataloader, num_epochs, device, optimizer, progress_bar):\n",
+    "def tokenize_function(texts, tokenizer):\n",
+    "    return tokenizer(texts, padding=\"max_length\", truncation=True)\n",
+    "\n",
+    "def train_loop(model, train_dataloader, num_epochs, device, optimizer):\n",
     "    for _ in range(num_epochs):\n",
     "        for batch in train_dataloader:\n",
-    "            batch = {k: v.to(device) for k, v in batch.items()}\n",
-    "            outputs = model(**batch)\n",
-    "            loss = outputs.loss\n",
-    "            loss.backward()\n",
-    "\n",
-    "            optimizer.step()\n",
     "            optimizer.zero_grad()\n",
-    "            progress_bar.update(1)\n",
+    "            input_ids = batch['input_ids'].to(device)\n",
+    "            attention_mask = batch['attention_mask'].to(device)\n",
+    "            labels = batch['labels'].to(device)\n",
+    "            outputs = model(input_ids, attention_mask=attention_mask, labels=labels)\n",
+    "            loss = outputs[0]\n",
+    "            loss.backward()\n",
+    "            optimizer.step()\n",
     "\n",
-    "def train(client_flex_model: FlexModel, client_data: Dataset, tokenize_func, train_loop_func):\n",
-    "    X_data = [tokenize_func(example, client_flex_model['tokenizer']) for example in client_data.X_data]\n",
-    "    print(X_data)\n",
+    "def train_pt(client_flex_model: FlexModel, client_data: Dataset, tokenize_func, train_loop_func):\n",
+    "    X_data = tokenize_func(client_data.X_data.tolist(), client_flex_model['tokenizer'])\n",
     "    # client_flex_model.model.fit(X_data, client_data.y_data)\n",
-    "    hf_dataset = HFDataset.from_dict(\n",
-    "        {'text':X_data, 'labels': client_data.y_data}\n",
+    "    imdb_dataset = IMDbDataset(X_data, client_data.y_data)\n",
+    "    device = torch.device('mps') if torch.backends.mps.is_available() else torch.device('cpu')\n",
+    "    training_args = TrainingArguments(\n",
+    "        output_dir='./results',          # output directory\n",
+    "        num_train_epochs=1,              # total number of training epochs\n",
+    "        per_device_train_batch_size=16,  # batch size per device during training\n",
+    "        per_device_eval_batch_size=64,   # batch size for evaluation\n",
+    "        warmup_steps=500,                # number of warmup steps for learning rate scheduler\n",
+    "        # weight_decay=0.01,               # strength of weight decay\n",
+    "        # logging_dir='./logs',            # directory for storing logs\n",
+    "        # logging_steps=10,\n",
+    "        use_mps_device=True,\n",
     "    )\n",
-    "    hf_dataset = hf_dataset.format(\"torch\")\n",
-    "    train_dataloader = DataLoader(hf_dataset, shuffle=True, batch_size=8)\n",
+    "    trainer = Trainer(\n",
+    "        model=client_flex_model['model'],                         # the instantiated 🤗 Transformers model to be trained\n",
+    "        args=training_args,                  # training arguments, defined above\n",
+    "        train_dataset=imdb_dataset,         # training dataset\n",
+    "        # eval_dataset=val_dataset             # evaluation dataset\n",
+    "    )\n",
+    "    trainer.train()\n",
+    "\n",
+    "def train_native_pt(client_flex_model: FlexModel, client_data: Dataset, tokenize_func, train_loop_func):\n",
+    "    X_data = tokenize_func(client_data.X_data.tolist(), client_flex_model['tokenizer'])\n",
+    "    # client_flex_model.model.fit(X_data, client_data.y_data)\n",
+    "    imdb_dataset = IMDbDataset(X_data, client_data.y_data)\n",
+    "    imdb_loader = DataLoader(imdb_dataset, shuffle=True, batch_size=16)\n",
     "    optimizer = AdamW(client_flex_model.model.parameters(), lr=5e-5)\n",
     "    num_epochs = 3\n",
-    "    num_training_steps = num_epochs * len(train_dataloader)\n",
-    "    progress_bar = tqdm(range(num_training_steps))\n",
-    "    client_flex_model.model.train()\n",
-    "    # device = torch.device(\"cuda\") if torch.cuda.is_available() else torch.device(\"cpu\")\n",
     "    device = torch.device('mps') if torch.backends.mps.is_available() else torch.device('cpu')\n",
-    "    train_loop_func(client_flex_model.model, train_dataloader, num_epochs,\n",
-    "                    device, optimizer, progress_bar)\n",
+    "    device = torch.device('cpu')\n",
+    "    train_loop_func(client_flex_model['model'], imdb_loader, num_epochs, device, optimizer)\n",
     "\n",
-    "clients.map(train, tokenize_func=tokenize_function, train_loop_func=train_loop)"
+    "clients.map(train_pt, tokenize_func=tokenize_function, train_loop_func=train_loop)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from flex.pool.primitives import collect_clients_weights_pt, set_aggregated_weights_pt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "aggregators.map(collect_clients_weights_pt, clients)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from flex.pool.aggregators import fed_avg\n",
+    "\n",
+    "aggregators.map(fed_avg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "aggregators.map(set_aggregated_weights_pt, server)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from flex.pool import evaluate_server_model\n",
+    "\n",
+    "from sklearn import metrics\n",
+    "import evaluate\n",
+    "\n",
+    "def eval_loop(model, eval_dataloader, device, metric):\n",
+    "    model.eval()\n",
+    "    for batch in eval_dataloader:\n",
+    "        batch = {k: v.to(device) for k, v in batch.items()}\n",
+    "        with torch.no_grad():\n",
+    "            outputs = model(**batch)\n",
+    "\n",
+    "        logits = outputs.logits\n",
+    "        predictions = torch.argmax(logits, dim=-1)\n",
+    "        metric.add_batch(predictions=predictions, references=batch[\"labels\"])\n",
+    "    print(f\"Results: {metric.compute()}\")\n",
+    "\n",
+    "@evaluate_server_model\n",
+    "def evaluate_global_model(server_flex_model: FlexModel, test_data=None, tokenize_func=None, eval_func=None):\n",
+    "    X_data = tokenize_func(test_data.X_data.tolist()[:100], server_flex_model['tokenizer']) # Using subset, for testing purposes.\n",
+    "    imdb_dataset = IMDbDataset(X_data, test_data.y_data[:100]) # Using subset, for testing purposes.\n",
+    "    # preds = server_flex_model.model.evaluate(X_data)\n",
+    "    metric = evaluate.load(\"accuracy\")\n",
+    "    device = torch.device(\"cpu\")\n",
+    "    # device = torch.device('mps') if torch.backends.mps.is_available() else torch.device('cpu')\n",
+    "    imdb_dataloader = DataLoader(imdb_dataset, batch_size=1, shuffle=False)\n",
+    "    eval_func(server_flex_model['model'], imdb_dataloader, device, metric)\n",
+    "\n",
+    "test_examples = ag_news_dataset[1]\n",
+    "\n",
+    "test_data = Dataset.from_huggingface_dataset(test_examples, X_columns='text', label_columns='label')\n",
+    "server.map(evaluate_global_model, test_data=test_data, tokenize_func=tokenize_function, eval_func=eval_loop)"
    ]
   },
   {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Run the federated learning experiment for a few rounds\n",
+    "\n",
+    "Now, we can summarize the steps provided above and run the federated experiment for multiple rounds:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_rounds = 5\n",
+    "p = FlexPool.client_server_architecture(\n",
+    "    flex_dataset, init_func=define_model\n",
+    ")\n",
+    "\n",
+    "filtered_pool = p.filter(clients_dropout=0.8)\n",
+    "\n",
+    "servers = p.servers\n",
+    "clients = filtered_pool.clients\n",
+    "aggregators = p.aggregators\n",
+    "\n",
+    "for i in range(n_rounds):\n",
+    "    servers.map(copy_server_model_to_clients, clients)\n",
+    "    clients.map(train_pt, tokenize_func=tokenize_function, train_loop_func=train_loop)\n",
+    "    aggregators.map(collect_clients_weights_pt, clients)\n",
+    "    aggregators.map(fed_avg)\n",
+    "    aggregators.map(set_aggregated_weights_pt, servers)\n",
+    "\n",
+    "print(\"Federated model scores\")\n",
+    "server.map(evaluate_global_model, test_data=test_data, tokenize_func=tokenize_function, eval_func=eval_loop)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### END\n",
+    "Congratulations, now you know how to train a model using FLEXible for multiples rounds using the *HuggingFace* ecosystem with PyTorch as Deep Learning framawork. Remember that it's important to first deploy/initialize the model on the clients, so you can run the rounds without problem!"
+   ]
   }
  ],
  "metadata": {
