Added comments to the notebook for making it aviable for realease.

--- a/notebooks/flex_text_classification_huggingface_demo.ipynb
+++ b/notebooks/flex_text_classification_huggingface_demo.ipynb
@@ -192,6 +192,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "@deploy_server_model is a decorator designed to copy the model from the server to the clients at each federated learning round. The function that uses it, must have at least one argument, which is the FlexModel object that stores the model at the server."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -214,7 +222,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Train loop using torch"
+    "Suprisingly, there is no decorator for the training process as it can be imnplemented directly. As we are using PyTorch, we have to create the PyTorch dataset that will be fed into the model."
    ]
   },
   {
@@ -241,12 +249,20 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As we are using the *transformers* library, we can use the **Trainer** class to automatize the train process. In case you prefer to create your own train function for the model, you hace to create your train loop function. Here we show both options, one with the *Trainer* class, and one with a classic train loop for PyTorch."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Using Trainer\n",
+    "# Using Trainer or native PyTorch.\n",
     "\n",
     "from flex.data import Dataset\n",
     "from tqdm.auto import tqdm\n",
@@ -309,6 +325,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "When the model is trained, we have to collect the weights from the clients, so we can aggregate them. At FLEXible exists a primitive to collect those weights for a neural network. You can use this funcion, or you can create your own function. Also, in FLEXible exists a funcion to set the aggregated weihts for PyTorch models."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -327,6 +351,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For the aggregation it is possible to implement your own aggregation function with the *aggregate_weights* decorator, or we can use the aggregators that are already implemented in FLEXible, such as FedAvg."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -338,12 +370,28 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After aggregating the weights, we use the set_aggregated_weights for PyTorch, that set the aggregated weights to the server model."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "aggregators.map(set_aggregated_weights_pt, server)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After training the model and setting the weights onto the server model, we can just evaluate it using the *evaluate_server_model* decorator. This decorator is created to test the server model using external data."
    ]
   },
   {
@@ -400,26 +448,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_rounds = 5\n",
-    "p = FlexPool.client_server_architecture(\n",
-    "    flex_dataset, init_func=define_model\n",
-    ")\n",
-    "\n",
-    "filtered_pool = p.filter(clients_dropout=0.8)\n",
-    "\n",
-    "servers = p.servers\n",
-    "clients = filtered_pool.clients\n",
-    "aggregators = p.aggregators\n",
-    "\n",
-    "for i in range(n_rounds):\n",
-    "    servers.map(copy_server_model_to_clients, clients)\n",
-    "    clients.map(train_pt, tokenize_func=tokenize_function, train_loop_func=train_loop)\n",
-    "    aggregators.map(collect_clients_weights_pt, clients)\n",
-    "    aggregators.map(fed_avg)\n",
-    "    aggregators.map(set_aggregated_weights_pt, servers)\n",
-    "\n",
-    "print(\"Federated model scores\")\n",
-    "server.map(evaluate_global_model, test_data=test_data, tokenize_func=tokenize_function, eval_func=eval_loop)"
+    "def train_n_rounds(n_rounds, clients_per_round=2):\n",
+    "    pool = FlexPool.client_server_architecture(fed_dataset=flex_dataset, init_func=define_model)\n",
+    "    for i in range(n_rounds):\n",
+    "        print(f\"\\nRunning round: {i+1} of {n_rounds+1}\")\n",
+    "        node_dropout = 1-(clients_per_round/len(pool.clients))\n",
+    "        selected_clients_pool = pool.clients.filter(node_dropout=node_dropout)\n",
+    "        selected_clients = selected_clients_pool.clients\n",
+    "        print(f\"Selected clients for this round: {len(selected_clients)}\")\n",
+    "        # Deploy the server model to the selected clients\n",
+    "        pool.servers.map(copy_server_model_to_clients, selected_clients)\n",
+    "        # Each selected client trains her model\n",
+    "        clients.map(train_pt, tokenize_func=tokenize_function, train_loop_func=train_loop)\n",
+    "        # The aggregador collects weights from the selected clients and aggregates them\n",
+    "        pool.aggregators.map(collect_clients_weights_pt, clients)\n",
+    "        pool.aggregators.map(fed_avg)\n",
+    "        # The aggregator send its aggregated weights to the server\n",
+    "        pool.aggregators.map(set_aggregated_weights_pt, pool.servers)\n",
+    "        pool.servers.map(evaluate_global_model, test_data=test_data, tokenize_func=tokenize_function, eval_func=eval_loop)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_n_rounds(n_rounds=5)"
    ]
   },
   {
