The notebook already gave birth a new notebook

--- a/notebooks/flex_text_classification_huggingface_using_trainer_demo.ipynb
+++ b/notebooks/flex_text_classification_huggingface_using_trainer_demo.ipynb
@@ -38,12 +38,8 @@
     "\n",
     "from datasets.load import load_dataset\n",
     "import torch\n",
-    "from transformers import AutoModelForSequenceClassification, AutoTokenizer, TFAutoModelForSequenceClassification\n",
+    "from transformers import AutoModelForSequenceClassification, AutoTokenizer\n",
     "\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "TRANSFORMER_MODEL = \"bert-base-uncased\"\n",
-    "TRANSFORMER_MODEL = \"bert-base-cased\"\n",
     "TRANSFORMER_MODEL = \"distilbert-base-uncased\""
    ]
   },
@@ -144,8 +140,6 @@
     "from flex.model import FlexModel\n",
     "\n",
     "from flex.pool.decorators import init_server_model\n",
-    "from flex.pool.decorators import collect_clients_weights\n",
-    "from flex.pool.decorators import aggregate_weights\n",
     "from flex.pool.decorators import deploy_server_model"
    ]
   },
@@ -160,7 +154,6 @@
     "    flex_model = FlexModel()\n",
     "    tokenizer = AutoTokenizer.from_pretrained(TRANSFORMER_MODEL)\n",
     "    model =  AutoModelForSequenceClassification.from_pretrained(TRANSFORMER_MODEL, num_labels=2)\n",
-    "    # model = TFAutoModelForSequenceClassification.from_pretrained(\"bert-base-cased\", num_labels=2)\n",
     "    flex_model['model'] = model\n",
     "    flex_model['tokenizer'] = tokenizer\n",
     "    return flex_model"
@@ -253,7 +246,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As we are using the *transformers* library, we can use the **Trainer** class to automatize the train process. In case you prefer to create your own train function for the model, you hace to create your train loop function. Here we show both options, one with the *Trainer* class, and one with a classic train loop for PyTorch."
+    "As we are using the *transformers* library, we can use the **Trainer** class to automatize the train process. In case you prefer to create your own train function for the model, you hace to create your train loop function. Here we show the classic train loop for PyTorch."
    ]
   },
   {
@@ -267,61 +260,31 @@
     "from flex.data import Dataset\n",
     "from tqdm.auto import tqdm\n",
     "from torch.utils.data import DataLoader\n",
-    "from torch.optim import AdamW\n",
     "from transformers import Trainer, TrainingArguments\n",
     "\n",
     "\n",
     "def tokenize_function(texts, tokenizer):\n",
     "    return tokenizer(texts, padding=\"max_length\", truncation=True)\n",
     "\n",
-    "def train_loop(model, train_dataloader, num_epochs, device, optimizer):\n",
-    "    for _ in range(num_epochs):\n",
-    "        for batch in train_dataloader:\n",
-    "            optimizer.zero_grad()\n",
-    "            input_ids = batch['input_ids'].to(device)\n",
-    "            attention_mask = batch['attention_mask'].to(device)\n",
-    "            labels = batch['labels'].to(device)\n",
-    "            outputs = model(input_ids, attention_mask=attention_mask, labels=labels)\n",
-    "            loss = outputs[0]\n",
-    "            loss.backward()\n",
-    "            optimizer.step()\n",
-    "\n",
-    "def train_pt(client_flex_model: FlexModel, client_data: Dataset, tokenize_func, train_loop_func):\n",
+    "def train_pt(client_flex_model: FlexModel, client_data: Dataset, tokenize_func):\n",
     "    X_data = tokenize_func(client_data.X_data.tolist(), client_flex_model['tokenizer'])\n",
-    "    # client_flex_model.model.fit(X_data, client_data.y_data)\n",
     "    imdb_dataset = IMDbDataset(X_data, client_data.y_data)\n",
-    "    device = torch.device('mps') if torch.backends.mps.is_available() else torch.device('cpu')\n",
     "    training_args = TrainingArguments(\n",
     "        output_dir='./results',          # output directory\n",
     "        num_train_epochs=1,              # total number of training epochs\n",
     "        per_device_train_batch_size=16,  # batch size per device during training\n",
     "        per_device_eval_batch_size=64,   # batch size for evaluation\n",
     "        warmup_steps=500,                # number of warmup steps for learning rate scheduler\n",
-    "        # weight_decay=0.01,               # strength of weight decay\n",
-    "        # logging_dir='./logs',            # directory for storing logs\n",
-    "        # logging_steps=10,\n",
     "        use_mps_device=True,\n",
     "    )\n",
     "    trainer = Trainer(\n",
     "        model=client_flex_model['model'],                         # the instantiated 🤗 Transformers model to be trained\n",
     "        args=training_args,                  # training arguments, defined above\n",
     "        train_dataset=imdb_dataset,         # training dataset\n",
-    "        # eval_dataset=val_dataset             # evaluation dataset\n",
     "    )\n",
     "    trainer.train()\n",
     "\n",
-    "def train_native_pt(client_flex_model: FlexModel, client_data: Dataset, tokenize_func, train_loop_func):\n",
-    "    X_data = tokenize_func(client_data.X_data.tolist(), client_flex_model['tokenizer'])\n",
-    "    # client_flex_model.model.fit(X_data, client_data.y_data)\n",
-    "    imdb_dataset = IMDbDataset(X_data, client_data.y_data)\n",
-    "    imdb_loader = DataLoader(imdb_dataset, shuffle=True, batch_size=16)\n",
-    "    optimizer = AdamW(client_flex_model.model.parameters(), lr=5e-5)\n",
-    "    num_epochs = 3\n",
-    "    device = torch.device('mps') if torch.backends.mps.is_available() else torch.device('cpu')\n",
-    "    device = torch.device('cpu')\n",
-    "    train_loop_func(client_flex_model['model'], imdb_loader, num_epochs, device, optimizer)\n",
-    "\n",
-    "clients.map(train_pt, tokenize_func=tokenize_function, train_loop_func=train_loop)"
+    "clients.map(train_pt, tokenize_func=tokenize_function)"
    ]
   },
   {
@@ -401,8 +364,6 @@
    "outputs": [],
    "source": [
     "from flex.pool import evaluate_server_model\n",
-    "\n",
-    "from sklearn import metrics\n",
     "import evaluate\n",
     "\n",
     "def eval_loop(model, eval_dataloader, device, metric):\n",
@@ -421,10 +382,8 @@
     "def evaluate_global_model(server_flex_model: FlexModel, test_data=None, tokenize_func=None, eval_func=None):\n",
     "    X_data = tokenize_func(test_data.X_data.tolist()[:100], server_flex_model['tokenizer']) # Using subset, for testing purposes.\n",
     "    imdb_dataset = IMDbDataset(X_data, test_data.y_data[:100]) # Using subset, for testing purposes.\n",
-    "    # preds = server_flex_model.model.evaluate(X_data)\n",
     "    metric = evaluate.load(\"accuracy\")\n",
-    "    device = torch.device(\"cpu\")\n",
-    "    # device = torch.device('mps') if torch.backends.mps.is_available() else torch.device('cpu')\n",
+    "    device = torch.device('cuda') if torch.cuda.is_available() else torch.device('cpu')\n",
     "    imdb_dataloader = DataLoader(imdb_dataset, batch_size=1, shuffle=False)\n",
     "    eval_func(server_flex_model['model'], imdb_dataloader, device, metric)\n",
     "\n",
@@ -459,9 +418,10 @@
     "        # Deploy the server model to the selected clients\n",
     "        pool.servers.map(copy_server_model_to_clients, selected_clients)\n",
     "        # Each selected client trains her model\n",
-    "        clients.map(train_pt, tokenize_func=tokenize_function, train_loop_func=train_loop)\n",
+    "        selected_clients.map(train_pt, tokenize_func=tokenize_function)\n",
     "        # The aggregador collects weights from the selected clients and aggregates them\n",
-    "        pool.aggregators.map(collect_clients_weights_pt, clients)\n",
+    "        pool.aggregators.map(collect_clients_weights_pt, selected_clients)\n",
+    "        # Apply FedAvg aggregator\n",
     "        pool.aggregators.map(fed_avg)\n",
     "        # The aggregator send its aggregated weights to the server\n",
     "        pool.aggregators.map(set_aggregated_weights_pt, pool.servers)\n",
