--- a/notebooks/flex_text_classification_tensorflow_demo.ipynb
+++ b/notebooks/flex_text_classification_tensorflow_demo.ipynb
@@ -352,8 +352,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# clients.map(collect_weights, aggregator)\n",
     "aggregator.map(collect_weights, clients)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After collecting the weights from the clients, we implement the FedAvg aggregator and then apply it to the aggregated weights from the clients."
    ]
   },
   {
