--- a/notebooks/flex_text_classification_tensorflow_with_decorators.ipynb
+++ b/notebooks/flex_text_classification_tensorflow_with_decorators.ipynb
@@ -138,6 +138,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "from flex.model import FlexModel\n",
@@ -155,10 +158,7 @@
     "    )\n",
     "    client_flex_model[\"model\"] = model\n",
     "    return client_flex_model"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
@@ -241,26 +241,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "@set_aggregated_weights\n",
     "def set_aggregated_weights_tf(server_flex_model, aggregated_weights, *args, **kwargs):\n",
     "    server_flex_model[\"model\"].set_weights(aggregated_weights)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "aggregator.map(set_aggregated_weights_tf, server)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
@@ -300,6 +300,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -323,7 +324,7 @@
     "        pool.aggregators.map(fed_avg)\n",
     "        pool.aggregators.map(set_aggregated_weights_tf, pool.servers)\n",
     "        pool.servers.map(copy_model_to_clients, pool.clients)\n",
-    "        pool.servers.map(evaluate_server_model_tf, test_data=test_examples, test_labels=test_labels)"
+    "        print(pool.servers.map(evaluate_server_model_tf, test_data=test_examples, test_labels=test_labels))"
    ]
   },
   {
@@ -336,6 +337,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -362,7 +364,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.4"
   },
   "orig_nbformat": 4
  },
